style/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Mate+SC&family=Odibee+Sans&family=Roboto+Condensed:wght@300&display=swap');

body{
    max-width: 1536px;
    margin: auto;
    background-image: url('../images/bg.png');
    background-repeat: no-repeat;
    background-size: 100% 750px;
}

html{
    scroll-behavior: smooth;
}

*{
    box-sizing: border-box;
    margin: 0;
}

.container{
    margin: auto;
}

.row{
    display: flex;
    flex-direction: row;
}

/* header section starts */

header{
    background-color: transparent;
    position: absolute;
    padding-bottom: 93vh;
}

header .row{
    background-color: black;
    position: fixed;
    z-index: 1;
}

header .row{
    align-items: center;
}

header .name{
    margin-right: 700px;   
    position: relative; 
    font-family: 'Bebas Neue', cursive;
    font-weight: bold;
    font-size: 50px;
    color: #ffffff;
}

header .name a{
    color: #ed1c24;
}

.logo img{
    width: 50px;
    height: 50px;
    margin-left: 10px;
    padding: 3px;
    margin-top: 5px;
}

.rotate {
    animation: rotation 5s infinite linear;
}
  
@keyframes rotation {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(359deg);
    }
}

.navbar {
    display: flex;
    position: relative;
    align-items: center;
}

.brand-title{
    display: flex;
    flex-direction: row;
}

.navbar-links {
    height: 100%;
}

.navbar-links ul {
    display: flex;
    margin: 0;
    padding: 0;
}

.navbar-links li {
    list-style: none;
}

.navbar-links li a {
    display: block;
    font-size: 15px;
    text-decoration: none;
    color: white;
    padding: 1rem;
    line-height: 72px;
    font-family: 'Bebas Neue', cursive;
    font-size: 20px;
    font-weight: 300px;
    position: relative;
    padding-top: 0;
    padding-bottom: 0;
   
}

.navbar-links li .home{
    color: #ed1c24;
}

.navbar-links li a::before{
    content: '';
    height: 3px;
    background-color:#ed1c24;
    width: 0%;
    position: absolute;
    right: 0px;
    bottom: -1px;
    bottom: -1px;
}

.navbar-links li a:hover::before{
    width: 100%;
    left: 0;
}

.toggle-button {
    position: absolute;
    top: 0.5rem;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
}

.toggle-button .bar {
    height: 3px;
    width: 100%;
    background-color: white;
    border-radius: 10px;
}

.bookbtn{
    background-color: #202133;
    font-family: 'Bebas Neue', cursive;
    font-size: 15px;
    padding: 5px 20px;
    color: #efefef;
    border: 2px solid #202133;
}

.home .container{
    padding-top: 100px;
}
.quote {
    color: #ffffff;
    font-family: 'Orbitron', sans-serif;
    margin-left: 100px;
    font-size: 70px;
    padding-top: 40px;
}

.quote .back{
    color: #ed1c24;
    text-shadow: 2px 2px #ffffff;
}

.quote .and{
    font-family: 'Odibee Sans', cursive;
}

.moon-bg img{
    position: absolute;
    transition: transform 3s ease-in;
    z-index: -2;
}

.playingMoon{
    transform: translateX(1050px);
}

.astronaut-bg{
    position: absolute;
    right: 10%;
    z-index: -1;
}

.astronaut-bg img{
    margin-top: 1400px;
    transition: transform 3s ease-in;   
}

.playingAstro{
    transform: translatey(-1400px);
}

/* .playingAstroFloat{
    animation: float 12s ease-in-out infinite;
} */

@keyframes float {
	0% {
		transform: translatey(0px);
	}
    50%{
        transform: rotateZ(10deg);
    }
	100% {
		transform: translatey(0px);
	}
}

.exploreBtn {
    background-color: Transparent;
    background-repeat:no-repeat;
    border: none;
    padding: 10px 10px;
    cursor:pointer;
    overflow: hidden;
    outline:none;
    color: #8E95B4;
    /* color: #464f69; */
    margin-top: 80px;
    font-size: 30px;
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: lighter;
    margin-bottom: 120px;
}

.exploreBtn img{
    border-radius: 50px;
    border: 2px solid #8E95B4;
}

.exploreBtn:hover {
    background: #ed1c24;
    color: #ffffff;
    border: 2px solid #8E95B4;
    ;
}
/* header section ends */

/* Destination css starts*/

.destination{
    margin-bottom: 160px;
    padding-top: 90px;
}
.destination .destination-container .section-title{
    font-size: 60px;
    color: #ed1c24;
    font-family: 'Bebas Neue', cursive;
    text-decoration: overline;
    text-decoration-color: #ed1c24;
    margin-left: 160px;
    margin-bottom: 20px;
}

.image-container{
    margin-left: 130px;
    display: flex;
    flex-direction: row;
    z-index: 1;
}

.image-container figure{
    margin-left: 30px;
}

figcaption{
    font-family: 'Bebas Neue', cursive;
    font-size: 20px;
}

figure button {
    background-color: #000000;
    border: 3px solid #ed1c24;
    border-radius: 10px;
    width: 110%; 
    height: 100%;
}

.marsG,.moonG,.jupiterG{
    animation: rotation 10s infinite linear;
    width: 140px;
    height: 140px;
    cursor: pointer;

}

/*Moon Overview css starts*/

.moonOverview{
    margin-top: 100px;
}

.outside{
    color: #000000;
    font-size: 120px;
    font-family: 'Bebas Neue', cursive;
    margin-top: 140px;
    margin-left: 160px;
} 

.moonOverview .inside{
   position: absolute;
   width: 750px;
   height: 300px;
   margin-left: 40px;
   z-index: -1;
}

.moonOverview h2{
    color: #000000;
    font-size: 60px;
    font-family: 'Bebas Neue', cursive;
    margin-left: 160px;

}

.moonOverview p{
    color: #8b8b8b;
    font-size: 20px;
    font-family: 'Roboto Condensed', sans-serif;
    text-align: justify;
    line-height: 150%;
}

.moonDescription{
    display: flex;
    flex-direction: row;
    margin-left: 160px;
}

.moonDescription .p1,.p2{
    width: 500px;
}    

.moonDescription .p2{
    margin-left: 20px;
}
/* ... */

